--- a/test2.html
+++ b/test2.html
@@ -1169,6 +1169,8 @@
                     landUseClickLock = true
 
                     saveAndLoadDiv.style.display = "flex"
+
+                    editMode(true)
                 })
                 editButton.appendChild(editIcon)
 
