--- a/index_v1.html
+++ b/index_v1.html
@@ -343,6 +343,21 @@
         .modal-button.cancel:hover {
             background: #5a6268;
         }
+
+        .selected-farm-feature {
+            background-color: #2196f3;
+            color: white;
+        }
+
+        .selected-farm-item {
+            display: flex;
+            align-items: center;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 5px;
+            cursor: pointer;
+            user-select: none;
+        }
     </style>
 </head>
 
@@ -1450,94 +1465,104 @@
             return { div, turnOn, turnOff }
         }
 
+
+        const div = document.createElement("div")
+        div.className = "selected-farm-item"
+        div.style.justifyContent = "center"
+        const text = document.createElement("b")
+        text.innerText = 'Create New Feature'
+        div.appendChild(text)
+        div.addEventListener("click", () => {
+            
+        })
+        farmFeaturesListDiv.appendChild(div)
+
+
         createFarmFeaturesList()
         function createFarmFeaturesList() {
+
+
             farmFeaturesNames.forEach(item => {
+                farmFeaturesListDiv.appendChild(createItem(item))
+            })
+
+            function createItem(item, callback) {
                 const div = document.createElement("div")
-                div.style.display = "flex"
-                div.style.alignItems = "center"
-                div.style.border = "1px solid #ccc"
-                div.style.borderRadius = "5px"
-                div.style.padding = "5px"
-                div.style.cursor = "pointer"
-                div.style.userSelect = "none"
+                div.className = "selected-farm-item"
                 const text = document.createElement("span")
                 text.innerText = ' + ' + item
                 div.appendChild(text)
-
                 div.addEventListener("click", () => {
-
+                    div.classList.add("selected-farm-feature")
                     Draw.changeMode(Draw.modes.DRAW_POINT)
-
                     map.once('draw.create', function (e) {
-                        //draw get last id 
                         const id = e.features[0].id
-                        console.log('id', id);
                         Draw.setFeatureProperty(id, "name", item)
+                        div.classList.remove("selected-farm-feature")
                     })
-
-                    //cursor 
-                    // changeCursor("crosshair")
-                    // map.once('click',
-                    //     function (e) {
-                    //         const coordinates = e.lngLat
-                    //         const feature = {
-                    //             'type': 'Feature',
-                    //             'properties': {
-                    //                 'user_name': item,
-                    //             },
-                    //             'geometry': {
-                    //                 'type': 'Point',
-                    //                 'coordinates': [coordinates.lng, coordinates.lat]
-                    //             }
-                    //         }
-                    //         map.getSource('farm-features').setData({
-                    //             'type': 'FeatureCollection',
-                    //             'features': [
-                    //                 ...map.getSource('farm-features')._data.features,
-                    //                 feature
-                    //             ]
-                    //         })
-                    //         changeCursor("pointer")
-                    //     }
-                    // )
-
-                    // map.once('draw.create', function (e) {
-                    //     //draw get last id 
-                    //     const id = e.features[0].id
-                    //     console.log('id', id);
-                    //     Draw.setFeatureProperty(id, "name", item)
-                    // })
-
-                    // map.once('draw.create', function (e) {
-                    //     const coordinates = e.features[0].geometry.coordinates
-                    //     const feature = {
-                    //         'type': 'Feature',
-                    //         'properties': {
-                    //             'name': item,
-                    //         },
-                    //         'geometry': {
-                    //             'type': 'Point',
-                    //             'coordinates': coordinates
-                    //         }
-                    //     }
-                    //     map.getSource('farm-features').setData({
-                    //         'type': 'FeatureCollection',
-                    //         'features': [
-                    //             ...map.getSource('farm-features')._data.features,
-                    //             feature
-                    //         ]
-                    //     })
-                    //     Draw.changeMode('simple_select')
-                    //     //Draw delete last point
-                    //     Draw.delete(e.features[0].id)
-
-                    //     currentMode = "simple_select"
-                    // });
-
                 })
-                farmFeaturesListDiv.appendChild(div)
-            })
+                return div
+            }
+
+
+            //cursor 
+            // changeCursor("crosshair")
+            // map.once('click',
+            //     function (e) {
+            //         const coordinates = e.lngLat
+            //         const feature = {
+            //             'type': 'Feature',
+            //             'properties': {
+            //                 'user_name': item,
+            //             },
+            //             'geometry': {
+            //                 'type': 'Point',
+            //                 'coordinates': [coordinates.lng, coordinates.lat]
+            //             }
+            //         }
+            //         map.getSource('farm-features').setData({
+            //             'type': 'FeatureCollection',
+            //             'features': [
+            //                 ...map.getSource('farm-features')._data.features,
+            //                 feature
+            //             ]
+            //         })
+            //         changeCursor("pointer")
+            //     }
+            // )
+
+            // map.once('draw.create', function (e) {
+            //     //draw get last id 
+            //     const id = e.features[0].id
+            //     console.log('id', id);
+            //     Draw.setFeatureProperty(id, "name", item)
+            // })
+
+            // map.once('draw.create', function (e) {
+            //     const coordinates = e.features[0].geometry.coordinates
+            //     const feature = {
+            //         'type': 'Feature',
+            //         'properties': {
+            //             'name': item,
+            //         },
+            //         'geometry': {
+            //             'type': 'Point',
+            //             'coordinates': coordinates
+            //         }
+            //     }
+            //     map.getSource('farm-features').setData({
+            //         'type': 'FeatureCollection',
+            //         'features': [
+            //             ...map.getSource('farm-features')._data.features,
+            //             feature
+            //         ]
+            //     })
+            //     Draw.changeMode('simple_select')
+            //     //Draw delete last point
+            //     Draw.delete(e.features[0].id)
+
+            //     currentMode = "simple_select"
+            // });
         }
 
         function createObservableArray(callback) {
